--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web Application Development</title>
+  </head>
+  <body>
+    <h1>WAP</h1>
+  </body>
+</html>
